--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -31,10 +31,10 @@ on:
     tags: [ "*.*.*" ]
 
 env:
-  AWS_REGION: MY_AWS_REGION                   # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: MY_ECR_REPOSITORY           # set this to your Amazon ECR repository name
-  ECS_SERVICE: MY_ECS_SERVICE                 # set this to your Amazon ECS service name
-  ECS_CLUSTER: MY_ECS_CLUSTER                 # set this to your Amazon ECS cluster name
+  AWS_REGION: eu-west-3                   # set this to your preferred AWS region, e.g. us-west-1
+  ECR_REPOSITORY: 632375992524.dkr.ecr.eu-west-3.amazonaws.com/test-app           # set this to your Amazon ECR repository name
+  ECS_SERVICE: django                 # set this to your Amazon ECS service name
+  ECS_CLUSTER: DevCluster                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: MY_ECS_TASK_DEFINITION # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: MY_CONTAINER_NAME           # set this to the name of the container in the
